# k8s-search-pod

./: Cargo.toml  Readme.md  build.sh
src/: main.rs
