[package]
name = "k8s-search-pod"
version = "0.1.0"
edition = "2021"
description = "Find pod by ip."
readme = "Readme.md"

[package.metadata.deb]
maintainer = "Dmitriy Vlassov <dmitriy@vlassov.pw>"
extended-description = "Find pod by ip."
depends = "$auto"
section = "utils"
priority = "optional"
maintainer-scripts = "deb_scripts/"

[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
anyhow = "1.0.44"
k8s-openapi = { version = "0.15.0", default-features = false, features = ["v1_22"] }
kube = { version = "0.73.1", features = ["runtime","derive"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
prettytable-rs = "0.8.0"
getopts = "0.2.21"
