[package]
name = "k8s-search-pod"
version = "0.1.0"
edition = "2021"
description = "Find pod by ip."
readme = "Readme.md"

[package.metadata.deb]
maintainer = "Dmitriy Vlassov <dmitriy@vlassov.pw>"
extended-description = "Find pod by ip."
depends = "$auto"
section = "utils"
priority = "optional"
maintainer-scripts = "deb_scripts/"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
anyhow = "1.0.71"
k8s-openapi = { version = "0.18.0", default-features = false, features = ["v1_26"] }
kube = { version = "0.83", features = ["runtime","derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
prettytable-rs = "0.10.0"
getopts = "0.2.21"
